--- a/src/AccountsApi/Dockerfile
+++ b/src/AccountsApi/Dockerfile
@@ -1,20 +1,14 @@
-FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
 WORKDIR /app
 
 EXPOSE 80
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
-WORKDIR /src
-COPY ["AcountsApi.csproj", "AcountsApi/"]
-RUN dotnet restore "AcountsApi.csproj"
+COPY *.csproj .
+RUN dotnet restore
 COPY . .
+RUN dotnet publish -c Release -o out
 
-RUN dotnet build "AcountsApi.csproj" -c Release -o /app/build
-
-FROM build AS publish
-RUN dotnet publish "AcountsApi.csproj" -c Release -o /app/publish
-
-FROM base AS final
+FROM mcr.microsoft.com/dotnet/aspnet:8.0
 WORKDIR /app
-COPY --from=publish /app/publish .
+COPY --from=build /app/out .
 ENTRYPOINT ["dotnet", "AcountsApi.dll"]
