--- a/k8s/postgres-claim.yml
+++ b/k8s/postgres-claim.yml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: prostgres-volume-claim
+  name: postgres-volume-claim
   labels:
     app: postgres
 spec:
