--- a/k8s/userapi-service.yml
+++ b/k8s/userapi-service.yml
@@ -1,14 +1,14 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: user-api
+  name: userapi-svc
   labels:
-    app: user-api
+    app: userapi
 spec:
   ports:
   - port: 80
     protocol: TCP
     targetPort: 80
   selector:
-    app: user-api
+    app: userapi
   type: LoadBalancer
