Modified API Manifest files.

--- a/k8s/userapi-deployment.yml
+++ b/k8s/userapi-deployment.yml
@@ -20,3 +20,14 @@ spec:
         imagePullPolicy: Always
         ports:
         - containerPort: 80
+          name: http-webapi
+        resources:
+          requests:
+            cpu: 100m
+            memory: 128Mi
+          limits:
+            cpu: 100m
+            memory: 128Mi
+        env:
+        - name: ASPNETCORE_URLS
+          value: http://+:80
